--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ include_directories(
 add_library(
 	DictzipQuery
 	SHARED
+		src/index.cc
 		src/util/base64.cc
 		src/util/query.cc
 		src/istream/stream.cc
